--- a/index.html
+++ b/index.html
@@ -346,10 +346,20 @@
 <!-- start wpo-story-section -->
         <section class="wpo-story-section section-padding" id="story">
             <div class="container">
-                <div class="wpo-section-title">
+                <!-- <div class="wpo-section-title">
                     <span>Our Story</span>
                     <h2>How it Happened</h2>
-                </div>
+                </div> -->
+                <div class="row">
+                        <div class="col-12 col-lg-12">
+                            <div class="couple-story" >
+                                <div class="story">
+                                    <span>The simple things</span>
+                                    <h2>Live in the sunshine, swim the sea</h2>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 <div class="wpo-story-wrap">
                     <div class="wpo-story-item">
                         <div class="wpo-story-img-wrap">
