--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@
                 <div class="groom_brial_item">
                         <div class="groom_brial_img-wrap">
                             <div class="groom_brial_story_img wow zoomIn" data-wow-duration="1000ms">
-                                <img src="Images/bruno-nascimento-9XTyIiFceKM-unsplash.jpg" alt="">
+                                <img src="static/img/train.jpg" alt="">
                             </div>
                         </div>
                         <div class="groom_brial_content">
@@ -277,7 +277,7 @@
                     <div class="groom_brial_item">
                         <div class="groom_brial_img-wrap">
                             <div class="groom_brial_story_img wow zoomIn" data-wow-duration="1000ms">
-                                <img src="Images/bruno-nascimento-9XTyIiFceKM-unsplash.jpg" alt="">
+                                <img src="static/img/A comfy room.jpg" alt="">
                             </div>
                         </div>
                         <div class="groom_brial_content">
@@ -337,7 +337,7 @@
                     <div class="couple_story_item">
                         <div class="couple_img_wrap">
                             <div class="couple_story_img wow zoomIn" data-wow-duration="1000ms">
-                                <img src="static/img/ryan.jpg" alt="">
+                                <img src="static/img/chill1.jpg" alt="">
                             </div>
                             <div class="couple_img_shape">
                                 <img src="static/img/shape.png" alt="">
@@ -356,10 +356,10 @@
                     <div class="couple_story_item">
                         <div class="couple_img_wrap">
                             <div class="couple_story_img wow zoomIn" data-wow-duration="1000ms">
-                                <img src="static/img/ryan.jpg" alt="">
+                                <img src="static/img/chill.jpg" alt="">
                             </div>                         
                             <div class="couple_img_shape">
-                                <img src="static/img/shape.png" alt="">
+                                <img src="static/img/shape22.png" alt="">
                             </div>
                         </div>
                         <div class="couple_story_content">
@@ -375,7 +375,7 @@
                     <div class="couple_story_item">
                         <div class="couple_img_wrap">
                             <div class="couple_story_img wow zoomIn" data-wow-duration="1000ms">
-                                <img src="static/img/ryan.jpg" alt="">
+                                <img src="static/img/chill2.jpg" alt="">
                             </div>
                             <div class="couple_img_shape">
                                 <img src="static/img/shape2.png" alt="">
