--- a/index.html
+++ b/index.html
@@ -330,6 +330,9 @@
                                     <span>The simple things</span>
                                     <h2>Live in the sunshine, swim the sea</h2>
                                 </div>
+                                <div class="couple_shape">
+                                <img src="static/img/ls-flower-prlx.png" alt="">
+                            </div>
                             </div>
                         </div>
                     </div>
@@ -339,6 +342,7 @@
                             <div class="couple_story_img wow zoomIn" data-wow-duration="1000ms">
                                 <img src="static/img/chill1.jpg" alt="">
                             </div>
+                            
                             <div class="couple_img_shape">
                                 <img src="static/img/shape.png" alt="">
                             </div>
