--- a/index.html
+++ b/index.html
@@ -56,10 +56,13 @@
     <script src='https://cdnjs.cloudflare.com/ajax/libs/wow/1.1.2/wow.min.js'></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
 
-
+    <!-- Slide IMG-->
+    <script src="static/script.js"></script>
     <!-- Initialize Swiper -->
     <!--swiper css-->
    <link rel="stylesheet" href="static/style/swiper-bundle.min.css">
+
+   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <!--end swiper css-->
 
     <!-- theme css -->
@@ -260,12 +263,12 @@
             <div class="groom_brial_wrap"> 
                 <div class="groom_brial_item">
                         <div class="groom_brial_img-wrap">
-                            <div class="groom_brial_story_img wow zoomIn" data-wow-duration="1000ms">
+                            <div class="groom_brial_story_img wow fadeInLeft animated animated" data-wow-delay="0.8s">
                                 <img src="static/img/train.jpg" alt="">
                             </div>
                         </div>
-                        <div class="groom_brial_content">
-                            <div class="groom_brial_content_inner wow fadeInRightSlow" data-wow-duration="1700ms">
+                        <div class="groom_brial_content wow fadeInRightSlow" data-wow-duration="0.8s">
+                            <div class="groom_brial_content_inner">
                                 <span>15 June, 2014</span>
                                 <h2>How we meet</h2>
                                 <p>Consectetur adipiscing elit. Fringilla at risus orci, tempus facilisi sed. Enim
@@ -276,12 +279,12 @@
                     </div>
                     <div class="groom_brial_item">
                         <div class="groom_brial_img-wrap">
-                            <div class="groom_brial_story_img wow zoomIn" data-wow-duration="1000ms">
+                            <div class="groom_brial_story_img wow fadeInRight animated animated" data-wow-delay="0.8s">
                                 <img src="static/img/A comfy room.jpg" alt="">
                             </div>
                         </div>
                         <div class="groom_brial_content">
-                            <div class="groom_brial_content_inner wow fadeInRightSlow" data-wow-duration="1700ms">
+                            <div class="groom_brial_content_inner wow fadeInRightSlow" data-wow-duration="0.8s">
                                 <span>15 June, 2014</span>
                                 <h2>How we meet</h2>
                                 <p>Consectetur adipiscing elit. Fringilla at risus orci, tempus facilisi sed. Enim
@@ -325,7 +328,7 @@
             <div class="container">
                 <div class="row">
                         <div class="col-12 col-lg-12">
-                            <div class="couple-story" >
+                            <div class="couple-story wow fadeInUp animated animated" data-wow-delay="1s">
                                 <div class="story">
                                     <span>The simple things</span>
                                     <h2>Live in the sunshine, swim the sea</h2>
@@ -339,7 +342,7 @@
                 <div class="couple_story_wrap">
                     <div class="couple_story_item">
                         <div class="couple_img_wrap">
-                            <div class="couple_story_img wow zoomIn" data-wow-duration="1000ms">
+                            <div class="couple_story_img wow fadeInLeft animated animated" data-wow-delay="0.8s">
                                 <img src="static/img/chill1.jpg" alt="">
                             </div>
                             
@@ -348,10 +351,11 @@
                             </div>
                         </div>
                         <div class="couple_story_content">
-                            <div class="couple_story_content_inner wow fadeInRightSlow" data-wow-duration="1700ms">
+                            <div class="couple_story_content_inner wow fadeInRight animated animated" data-wow-delay="0.8s">
                                 <span>15 June, 2014</span>
                                 <h2>How we meet</h2>
-                                <p>Consectetur adipiscing elit. Fringilla at risus orci, tempus facilisi sed. Enim
+                                <p>
+                                    Consectetur adipiscing elit. Fringilla at risus orci, tempus facilisi sed. Enim
                                     tortor, faucibus netus orci donec volutpat adipiscing. Sit condimentum elit
                                     convallis libero. Nunc in eu tellus ipsum placerat.</p>
                             </div>
@@ -359,15 +363,15 @@
                     </div>
                     <div class="couple_story_item">
                         <div class="couple_img_wrap">
-                            <div class="couple_story_img wow zoomIn" data-wow-duration="1000ms">
-                                <img src="static/img/chill.jpg" alt="">
+                            <div class="couple_story_img wow fadeInRight animated animated" data-wow-delay="1s">
+                                <img src="static/img/Cozy reading corner.jpg" alt="">
                             </div>                         
                             <div class="couple_img_shape">
                                 <img src="static/img/shape22.png" alt="">
                             </div>
                         </div>
                         <div class="couple_story_content">
-                            <div class="couple_story_content_inner wow fadeInLeftSlow" data-wow-duration="1700ms">
+                            <div class="couple_story_content_inner wow fadeInLeft animated animated" data-wow-delay="1s">
                                 <span>02 Nov, 2020</span>
                                 <h2>He proposed, I said yes</h2>
                                 <p>Consectetur adipiscing elit. Fringilla at risus orci, tempus facilisi sed. Enim
@@ -378,15 +382,15 @@
                     </div>
                     <div class="couple_story_item">
                         <div class="couple_img_wrap">
-                            <div class="couple_story_img wow zoomIn" data-wow-duration="1000ms">
-                                <img src="static/img/chill2.jpg" alt="">
+                            <div class="couple_story_img wow fadeInLeft animated animated" data-wow-delay="0.8s">
+                                <img src="static/img/download.jpg" alt="">
                             </div>
                             <div class="couple_img_shape">
                                 <img src="static/img/shape2.png" alt="">
                             </div>
                         </div>
                         <div class="couple_story_content">
-                            <div class="couple_story_content_inner wow fadeInRightSlow" data-wow-duration="1700ms">
+                            <div class="couple_story_content_inner wow fadeInRight animated animated" data-wow-delay="0.8s">
                                 <span>15 Apr, 2021</span>
                                 <h2>Our Engagement Day</h2>
                                 <p>Consectetur adipiscing elit. Fringilla at risus orci, tempus facilisi sed. Enim
@@ -400,41 +404,70 @@
         </section>
         <!-- end couple section -->
 
-        <!-- </section> -->
-        <!--KHUNG 1-->
-        <section id="intro" class="info-frame">
+        <!-- Couple memmory -->
+        <section class="couple_memmory_section section-padding" id="memmory">
             <div class="container">
-                <div class="info-title">
-                    <h3>Take the photo</h3>
-                </div>
-                <div class="underline"></div>
-                <p style="color: #e79418; font-weight:400;" class="wow fadeInUp animated animated" data-wow-delay="0.5s">Modern websites and web services</p>
-                <div class="khung_bu">
-                    <div class="row">
-                        <div class="col-lg-4">
-                            <div class="aboutmetext">
-                                <p class="wow fadeInUp animated animated" data-wow-delay="0.8s">I design and develop services for customers of all sizes, specializing in creating stylish, modern websites, web services and online stores. My passion is to design digital user experiences through the bold interface and
-                                    meaningful interactions.
-                                </p>
-                                <p class="wow fadeInUp animated animated" data-wow-delay="1s">I design and develop services for customers of all sizes, specializing in creating stylish, modern websites, web services and online stores. My passion is to design digital user experiences through the bold interface and
-                                    meaningful interactions.
-                                </p>
-                                <p class="wow fadeInUp animated animated" data-wow-delay="1.2s">I design and develop services for customers of all sizes, specializing in creating stylish, modern websites, web services and online stores. My passion is to design digital user experiences through the bold interface and
-                                    meaningful interactions.
-                                </p>
-                            </div>
-                        </div>
-                        <div class="col-lg-8">
-                            <div class="khung_chu wow fadeInUp animated animated" data-wow-delay="1.5s">
-                                <div class="signature">
+                <div class="row">
+                        <div class="col-12 col-lg-12">
+                            <div class="couple_memmory">
+                                <div class="story">
+                                    <span>The simple things</span>
+                                    <h2>Our Memmory</h2>
                                 </div>
-                            </div>
+                                </div>
                         </div>
+                        <div class="col-12 col-lg-12">
+                                <div class="couple_slide_img">
+                                <div class="gallery-wrapper">
+                                <div class="gallery-track" id="galleryTrack">
+                                <div class="gallery-item-container">
+                                    <img src="static/img/chill.jpg" alt="Ảnh 1" class="gallery-item">
+                                    <div class="overlay">
+                                        <i class="fas fa-plus"></i>
+                                    </div>
+                                </div>
+                                <div class="gallery-item-container">
+                                    <img src="static/img/chill2.jpg" alt="Ảnh 2" class="gallery-item">
+                                    <div class="overlay">
+                                        <i class="fas fa-plus"></i>
+                                    </div>
+                                </div>
+                                <div class="gallery-item-container">
+                                    <img src="static/img/chill5.jpg" alt="Ảnh 3" class="gallery-item">
+                                    <div class="overlay">
+                                        <i class="fas fa-plus"></i>
+                                    </div>
+                                </div>
+                                <div class="gallery-item-container">
+                                    <img src="static/img/chill1.jpg" alt="Ảnh 4" class="gallery-item">
+                                    <div class="overlay">
+                                        <i class="fas fa-plus"></i>
+                                    </div>
+                                </div>
+                                <div class="gallery-item-container">
+                                    <img src="static/img/train.jpg" alt="Ảnh 5" class="gallery-item">
+                                    <div class="overlay">
+                                        <i class="fas fa-plus"></i>
+                                    </div>
+                                </div>
+                                <div class="gallery-item-container">
+                                    <img src="static/img/A comfy room.jpg" alt="Ảnh 5" class="gallery-item">
+                                    <div class="overlay">
+                                        <i class="fas fa-plus"></i>
+                                    </div>
+                                </div>
+                                </div>
+                                </div>
+                            </div>                                             
                     </div>
-                </div>
-            </div>
+                    </div>
             </div>
         </section>
+       <div class="lightbox-overlay" id="lightbox">
+        <span class="lightbox-close">&times;</span> <button class="lightbox-nav-button prev-lightbox">&lt;</button>
+        <img src="" alt="Ảnh phóng to" class="lightbox-image" id="lightbox-img">
+        <button class="lightbox-nav-button next-lightbox">&gt;</button>
+    </div>
 
         <!--KHUNG 2-->
 
@@ -651,5 +684,7 @@ function resetAutoplay() {
 updateSlide();
 startAutoplay();
 </script>-->
+
+
 
 </html>
