--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@
         continueBtn.addEventListener('click', () => {
             notification.classList.remove('show'); // Ẩn thông báo
             continueBtn.classList.add('hidden'); // Ẩn nút Tiếp tục
-            window.location.href = 'https://doananhluan.github.io/ryanL'; // Chuyển hướng tới trang web khác
+            window.location.href = 'https://doananhluan.github.io/ryanL/home'; // Chuyển hướng tới trang web khác
         });
 
         // Lắng nghe sự kiện click vào nút đóng mới trong modal
