--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <!-- Liên kết đến file CSS riêng -->
     <link rel="stylesheet" href="style.css">
     <link rel="https://fontawesome.com/v5.15/icons?d=gallery&p=2&m=free">
+    
 </head>
 <body>
     <div id="app">
@@ -57,10 +58,22 @@
     </div>
 
     <!-- Thẻ Audio cho nhạc nền -->
-    <audio id="backgroundMusic" src="https://www.soundhelix.com/examples/mp3/SoundHelix-Song-1.mp3" autoplay loop muted></audio>
-    <!-- Thay đổi "https://www.soundhelix.com/examples/mp3/SoundHelix-Song-1.mp3" bằng URL của file nhạc MP3 của bạn -->
+    <audio id="bgm" src="static/img/sound.mp3" preload="auto"></audio>
 
-    <!-- Liên kết đến file JavaScript riêng -->
+  <script>
+    const bgm = document.getElementById("bgm");
+
+    function playMusic() {
+      bgm.play().catch(error => {
+        console.error("Playback failed:", error);
+      });
+      // Chỉ cần chạy 1 lần
+      document.removeEventListener("click", playMusic);
+    }
+
+    document.addEventListener("click", playMusic);
+  </script>
+  <!-- Liên kết đến file JavaScript riêng -->
     <script src="script.js"></script>
 </body>
 </html>
