--- a/home.html
+++ b/home.html
@@ -414,6 +414,18 @@
                     <img class="gallery-item" src="static/img/Ambient wallpaper Art.jpg"  alt="Image 4" data-original-index="5">
                     <div class="gallery-item-overlay"><span>+</span></div>
                 </div>
+                 <div class="gallery-item-container">
+                    <img class="gallery-item" src="static/img/chill6.jpg" data-fullres-src="static/img/chill6.jpg" alt="Image D" data-original-index="6">
+                    <div class="gallery-item-overlay"><span>+</span></div>
+                </div>
+                <div class="gallery-item-container">
+                    <img class="gallery-item" src="static/img/chill8.jpg" data-fullres-src="static/img/chill8.jpg" alt="Image D" data-original-index="7">
+                    <div class="gallery-item-overlay"><span>+</span></div>
+                </div>
+                <div class="gallery-item-container">
+                    <img class="gallery-item" src="static/img/chill11.jpg" data-fullres-src="static/img/chill11.jpg" alt="Image D" data-original-index="8">
+                    <div class="gallery-item-overlay"><span>+</span></div>
+                </div>
             </div>
         </div>
     </div>
@@ -423,27 +435,31 @@
         <div class="gallery-wrapper">
             <div class="gallery-track" id="galleryTrack2">
                 <div class="gallery-item-container">
-                    <img class="gallery-item" src="static/img/chill5.jpg"  alt="Image A" data-original-index="6">
+                    <img class="gallery-item" src="static/img/chill5.jpg"  alt="Image A" data-original-index="9">
                     <div class="gallery-item-overlay"><span>+</span></div>
                 </div>
                 <div class="gallery-item-container">
-                    <img class="gallery-item" src="static/img/chill10.jpg" alt="Image B" data-original-index="7">
+                    <img class="gallery-item" src="static/img/chill10.jpg" alt="Image B" data-original-index="10">
                     <div class="gallery-item-overlay"><span>+</span></div>
                 </div>
                 <div class="gallery-item-container">
-                    <img class="gallery-item" src="static/img/chill6.jpg" alt="Image B" data-original-index="8">
+                    <img class="gallery-item" src="static/img/chill6.jpg" alt="Image B" data-original-index="11">
                     <div class="gallery-item-overlay"><span>+</span></div>
                 </div>
                 <div class="gallery-item-container">
-                    <img class="gallery-item" src="static/img/chill8.jpg" alt="Image B" data-original-index="9">
+                    <img class="gallery-item" src="static/img/chill8.jpg" alt="Image B" data-original-index="10">
                     <div class="gallery-item-overlay"><span>+</span></div>
                 </div>
                 <div class="gallery-item-container">
-                    <img class="gallery-item" src="static/img/chill7.jpg" alt="Image C" data-original-index="10">
+                    <img class="gallery-item" src="static/img/chill7.jpg" alt="Image C" data-original-index="13">
                     <div class="gallery-item-overlay"><span>+</span></div>
                 </div>
                 <div class="gallery-item-container">
-                    <img class="gallery-item" src="static/img/Cozy reading corner.jpg" data-fullres-src="static/img/Cozy reading corner.jpg" alt="Image D" data-original-index="11">
+                    <img class="gallery-item" src="static/img/Cozy reading corner.jpg" data-fullres-src="static/img/Cozy reading corner.jpg" alt="Image D" data-original-index="12">
+                    <div class="gallery-item-overlay"><span>+</span></div>
+                </div>
+                 <div class="gallery-item-container">
+                    <img class="gallery-item" src="static/img/chill11.jpg" data-fullres-src="static/img/chill11.jpg" alt="Image D" data-original-index="13">
                     <div class="gallery-item-overlay"><span>+</span></div>
                 </div>
             </div>
