--- a/home.html
+++ b/home.html
@@ -112,7 +112,7 @@
         <nav class="navbar header-nav header-white navbar-expand-lg">
         <div class="container">
             <!-- <img src="static/img/rsvp-flower.png"></img> -->
-            <a class="navbar-brand" href="index.html">Shine<span class="theme-bg"></span></a>
+            <a class="navbar-brand" href="home.html">Shine<span class="theme-bg"></span></a>
             <!-- Mobile menu -->
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar-collapse-toggle">
                 <i class="fas fa-bars" style="color: #fff"></i>                    
@@ -172,7 +172,7 @@
         </div>
     </div>
     <div class="slide swiper-slide">
-        <img src="Images/marcus-dall-col-h335UgxudbA-unsplash.jpg" alt="" class="image" />
+        <img src="Images/cloud-forest-landscape.jpg" alt="" class="image" />
         <div class="image-data">
             
             <h2>
@@ -280,7 +280,7 @@
                </div>       
         </div> 
         </section>
-            
+            <div class="filmroll-top"></div>
 <!-- couple section -->
         <section class="couple_story_section section-padding" id="story">
             <div class="container">
@@ -391,7 +391,7 @@
         <div class="gallery-wrapper">
             <div class="gallery-track" id="galleryTrack1">
                 <div class="gallery-item-container">
-                    <img class="gallery-item" src="static/img/A comfy room.jpg" alt="Image 1" data-original-index="0">
+                    <img class="gallery-item" src="static/img/chill12.jpg" alt="Image 1" data-original-index="0">
                     <div class="gallery-item-overlay"><span>+</span></div>
                 </div>
                 <div class="gallery-item-container">
@@ -411,7 +411,7 @@
                     <div class="gallery-item-overlay"><span>+</span></div>
                 </div>
                 <div class="gallery-item-container">
-                    <img class="gallery-item" src="static/img/Ambient wallpaper Art.jpg"  alt="Image 4" data-original-index="5">
+                    <img class="gallery-item" src="static/img/chill14.jpg"  alt="Image 4" data-original-index="5">
                     <div class="gallery-item-overlay"><span>+</span></div>
                 </div>
                  <div class="gallery-item-container">
@@ -455,7 +455,7 @@
                     <div class="gallery-item-overlay"><span>+</span></div>
                 </div>
                 <div class="gallery-item-container">
-                    <img class="gallery-item" src="static/img/Cozy reading corner.jpg" data-fullres-src="static/img/Cozy reading corner.jpg" alt="Image D" data-original-index="12">
+                    <img class="gallery-item" src="static/img/chill0.jpg" data-fullres-src="static/img/chill0.jpg" alt="Image D" data-original-index="12">
                     <div class="gallery-item-overlay"><span>+</span></div>
                 </div>
                  <div class="gallery-item-container">
@@ -490,7 +490,7 @@
 
         <!--KHUNG 2-->
 
-        <div class="filmroll"></div>
+        <div class="filmroll-bottom"></div>
         </section>
 
         <!-- KHUNg 3 Gallery -->
