--- a/home.html
+++ b/home.html
@@ -172,7 +172,7 @@
         </div>
     </div>
     <div class="slide swiper-slide">
-        <img src="Images/cloud-forest-landscape.jpg" alt="" class="image" />
+        <img src="Images/train_night.jpg" alt="" class="image" />
         <div class="image-data">
             
             <h2>
@@ -499,11 +499,12 @@
 
             <div class="container">
                 <div class="gallery-tittle">
-                    <h3>Life is a daring adventure or it is nothing at all</h3>
-                    
-                    <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In varius ante libero, amet as sollicitudin elit malesuada et. 
-                        <br>Nulla facilisi. Pellentesque magna diam, mattis gravida eget, lobortis ut velit.
-                        <br> Nam interdum hendrerit nisl et malesuada. In varius ante libero, amet as sollicitudin elit malesuada et.</span>
+                    <span>The simple things</span>
+                  <h2>Yesterday is but today’s memory <br>Tomorrow is today’s dream</h2>
+                  <p>Consectetur adipiscing elit.<br> Fringilla at risus orci, tempus facilisi sed. Enim
+                    tortor, faucibus netus orci donec volutpat adipiscing.<br> Sit condimentum elit
+                    convallis libero. Nunc in eu tellus ipsum placerat.</p>
+                    <img src="static/img/2.png"></img>
                 </div>
                 <!-- <div class="framegallery">
                     <div class="row">
