--- a/home.html
+++ b/home.html
@@ -248,7 +248,7 @@
                 <div class="groom_brial_item">
                         <div class="groom_brial_img-wrap">
                             <div class="groom_brial_story_img wow fadeInLeft animated animated" data-wow-delay="0.8s">
-                                <img src="static/img/train.jpg" alt="">
+                                <img src="static/img/cr.jpg" alt="">
                             </div>
                         </div>
                         <div class="groom_brial_content">
@@ -264,7 +264,7 @@
                     <div class="groom_brial_item">
                         <div class="groom_brial_img-wrap">
                             <div class="groom_brial_story_img wow fadeInRight animated animated" data-wow-delay="0.8s">
-                                <img src="static/img/A comfy room.jpg" alt="">
+                                <img src="static/img/cd.jpg" alt="">
                             </div>
                         </div>
                         <div class="groom_brial_content">
@@ -301,7 +301,7 @@
                     <div class="couple_story_item">
                         <div class="couple_img_wrap">
                             <div class="couple_story_img wow fadeInLeft animated animated" data-wow-delay="0.8s">
-                                <img src="static/img/chill1.jpg" alt="">
+                                <img src="static/img/cd.jpg" alt="">
                             </div>
                             
                             <div class="couple_img_shape">
@@ -322,7 +322,7 @@
                     <div class="couple_story_item">
                         <div class="couple_img_wrap">
                             <div class="couple_story_img wow fadeInRight animated animated" data-wow-delay="1s">
-                                <img src="static/img/Cozy reading corner.jpg" alt="">
+                                <img src="static/img/2-4.jpg" alt="">
                             </div>                         
                             <div class="couple_img_shape">
                                 <img src="static/img/shape22.png" alt="">
@@ -341,7 +341,7 @@
                     <div class="couple_story_item">
                         <div class="couple_img_wrap">
                             <div class="couple_story_img wow fadeInLeft animated animated" data-wow-delay="0.8s">
-                                <img src="static/img/download.jpg" alt="">
+                                <img src="static/img/couple.jpg" alt="">
                             </div>
                             <div class="couple_img_shape">
                                 <img src="static/img/shape2.png" alt="">
