--- a/index.html
+++ b/index.html
@@ -10,6 +10,13 @@
     
 </head>
 <body>
+    <!-- page loading -->
+    <div id="loader-wrapper">
+        <div class="loader"></div>
+        <!-- <p>Chờ xíu nha</p> -->
+    </div>
+    <!-- end page loading -->
+     
     <div id="app">
         <h1>SunShine</h1>
         <button id="openModalBtn">
