--- a/home.html
+++ b/home.html
@@ -91,11 +91,11 @@
             <div class="collapse navbar-collapse justify-content-end" id="navbar-collapse-toggle">
                 <ul class="navbar-nav">
                     <li><a class="nav-link active" href="#home">Home</a></li>
-                    <li><a class="nav-link" href="#gallery">Gallery</a></li>
-                    <li><a class="nav-link" href="#aboutme">Behind the lens</a></li>
-                    <li><a class="nav-link" href="#color">Simulation</a></li>
-                    <li><a class="nav-link" href="#blog">Blog</a></li>
-                    <li><a class="nav-link" href="#contact">Contact</a></li>
+                    <li><a class="nav-link" href="#quote">Quote</a></li>
+                    <li><a class="nav-link" href="#about">About Us</a></li>
+                    <li><a class="nav-link" href="#howwemet">Story</a></li>
+                    <li><a class="nav-link" href="#galleryTrack1">Gallery</a></li>
+                    <li><a class="nav-link" href="#Blessing">Blessing</a></li>
                 </ul>
             </div>
 
@@ -198,7 +198,7 @@
        
         <!--Groom , Brial -->
 
-         <section class="groom_brial_section" id="story">   
+         <section class="groom_brial_section" id="about">   
             <div class="container">
             <div class="groom_brial_wrap"> 
                 <div class="groom_brial_item">
@@ -238,7 +238,7 @@
         </section>
             <div class="filmroll-top"></div>
 <!-- couple section -->
-        <section class="couple_story_section section-padding" id="story">
+        <section class="couple_story_section section-padding" id="howwemet">
             <div class="container">
                 <div class="row">
                         <div class="col-12 col-lg-12">
@@ -451,7 +451,7 @@
 
         <!-- KHUNg 3 Gallery -->
 
-         <section id="gallery" class="gallery-frame">
+         <section id="Blessing" class="gallery-frame">
 
             <div class="container">
                 <div class="gallery-tittle">
@@ -467,7 +467,7 @@
 
         <!--Khung 4 -->
 
-       <section id="gallery" class="gallery-frame">
+       <!-- <section id="Blessing" class="gallery-frame">
 
             <div class="container">
                 <div class="gallery-tittle">
@@ -478,10 +478,10 @@
                     convallis libero. Nunc in eu tellus ipsum placerat.</p>
                 </div>
             </div>
-        </section> 
+        </section>  -->
 
         <!--Thank you-->
-        <section>
+        <section id="contact" class="thankyou-frame">
         <div class="filmroll-thank">
             <div class="filmroll-thank-text">
                 <p> Thank for visiting </p>              
