--- a/home.html
+++ b/home.html
@@ -162,7 +162,7 @@
                             <div class="note_quote">
                                 <h2> "We're Gleam a small and enthusiastic <br> Photography minimalist style" </br>
                                 </h2>
-                                <h3> The little things in everyday life make up creativity.</h3>                              
+                                <h3> The little things in everyday life <br> make up creativity.</h3>                              
                             </div>
                             <div class="timecount">
                                 <!-- <h1>The art of life is to know how to enjoy a little</h1> -->
@@ -465,20 +465,6 @@
             </div>
         </section> 
 
-        <!--Khung 4 -->
-
-       <!-- <section id="Blessing" class="gallery-frame">
-
-            <div class="container">
-                <div class="gallery-tittle">
-                    <span>The simple things</span>
-                  <h2>Yesterday is but today’s memory <br>Tomorrow is today’s dream</h2>
-                  <p>Consectetur adipiscing elit.<br> Fringilla at risus orci, tempus facilisi sed. Enim
-                    tortor, faucibus netus orci donec volutpat adipiscing.<br> Sit condimentum elit
-                    convallis libero. Nunc in eu tellus ipsum placerat.</p>
-                </div>
-            </div>
-        </section>  -->
 
         <!--Thank you-->
         <section id="contact" class="thankyou-frame">
